<resources>
    <string name="app_name">ProjectLittleCare</string>
    <string name="title_activity_menu_main">MenuMain</string>
    <string name="title_home">Home</string>
    <string name="title_request">Request</string>
    <string name="title_matching">Matching</string>
    <string name="title_activity">Activity</string>
    <string name="title_matching_info">MatchingInfo</string>
    <string name="title_map">Map</string>
    <string name="id">ID</string>
    <string name="loginUser">Login As User</string>
    <string name="loginProvider">Login As Provider</string>
    <string name="password">Password</string>
    <string name="signIn">No account yet? Create one</string>
    <string name="logo">Logo</string>
    <string name="find">Find ID or Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
