<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_matching"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_matching" />

    <item
        android:id="@+id/navigation_matching_info"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_matching_info" />
</menu>
