<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:color="@color/colorPrimary"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/open_email"
        android:color="@color/LightGreen"
        android:title="@string/title_request" />

    <item
        android:id="@+id/navigation_matching"
        android:color="@color/Orange"
        android:icon="@drawable/couple"
        android:title="@string/title_matching" />

    <item
        android:id="@+id/navigation_activity"
        android:color="@color/Crimson"
        android:icon="@drawable/text_document"
        android:title="@string/title_activity" />

</menu>
